<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/h5_default_titlebar_color"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upgrade_cur_version_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/cur_ver_is"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/fast_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_has_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_has_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/fast_check_has" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_get_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_get_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/fast_check_get" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/default_interval_upgrade_tip" />

            <Button
                android:id="@+id/upgrade_default_interval_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/default_interval_upgrade" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/custom_interval_upgrade_tip" />

            <Button
                android:id="@+id/upgrade_custom_interval_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/white"
                android:background="@color/h5_default_titlebar_color"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/custom_interval_upgrade" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/notice" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>